[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hbmep"
version = "0.5.0"
authors = [
    { name="Vishweshwar Tyagi, James R. McIntosh", email="vt2353@columbia.edu" }
]
description = "Hierarchical Bayesian estimation of motor-evoked potential (MEP) size recruitment curves"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]
dependencies = [
    "numpy>=1.24.2",
    "pandas>=2.0.2",
    "scikit-learn>=1.2.1",
    "jax[cpu]>=0.4.24",
    "numpyro[cpu]>=0.13.2",
    "arviz>=0.18.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.2"
]

[project.optional-dependencies]
dev = [
    "jupyter==1.0.0"
]
test = [
    "pytest>=7.4.0",
    "pytest-pycodestyle>=2.3.1",
    "pytest-cov>=4.1.0"
]
docs = [
    "jupyter==1.0.0",
    "Sphinx<=7.0.1",
    "sphinx_rtd_theme==1.2.2"
]

[tool.pytest.ini_options]
minversion = 6.0
addopts = "-v --color=yes --junit-xml=out/junit/junit.xml --pycodestyle src --cov --cov-report term-missing --doctest-modules"
junit_family = "xunit2"
testpaths = ["tests"]

[project.urls]
"Homepage" = "https://github.com/hbmep/hbmep"
"Bug Tracker" = "https://github.com/hbmep/hbmep/issues"
